MYPLAN-2022 Fixed "Validating plan" hang issue. Added ignore list to hand off screen and styled.

--- a/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
+++ b/contrib/myplan/trunk/ks-myplan/myplan-web/src/main/webapp/ks-myplan/css/myplan.css
@@ -2770,7 +2770,7 @@ label.scheduled {
 
 .myplan-quarter-detail .myplan-course-sections .activityCourseTitle a {
     white-space: nowrap;
-    width: 128px;
+    width: 137px;
 }
 
 .myplan-quarter-detail .uif-collectionGroup .uif-header {
